change icons, add instalation modal

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Formerly: Over Three Hundred Proofs of God’s Existence" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,8 +27,8 @@
   <!-- CODELAB: Add iOS meta tags and icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Weather PWA">
-  <link rel="apple-touch-icon" href="/images/icons/icon-152x152.png">
+  <meta name="apple-mobile-web-app-title" content="Hundreds of Proofs">
+  <link rel="apple-touch-icon" href="logo192.png">
 
   <title>Hundreds of Proofs of God’s Existence</title>
 
